syntax = "proto3";
package pbs;
option go_package = "./service";

enum SrvMsgType{
  Unknown = 0;
  Online = 80;
  ACK = 81;
  CryptoMsg = 82;
}

message WSAck{
  int32 Code = 1;
  string MSG = 2;
}

message WSOnline{
  string UID = 1;
  int64 UnixTime = 2;
  bytes Sig = 3;
}

message WSCryptoMsg{
  string From = 1;
  string To = 2;
  bytes PayLoad = 3;
  int64 UnixTime = 4;
  bytes Sig = 5;
}


enum P2pMsgType{
  P2pUnknown = 0;
  P2pOnline = 1;
  P2pCryptoMsg = 2;
}

message P2pMsg{

  P2pMsgType msgTyp = 1;

  oneof payload{
    WSOnline online = 2;
    WSCryptoMsg msg = 3;
  }

}